# brightness_editor

./: CMakeLists.txt  ChannelCurveTransfoms.py  README.md  YUVTransforms.py  curve_brightness_editor.cpp
data/beautify_whitening_lut/: lookup_table_+1.csv  lookup_table_+2.csv  lookup_table_+3.csv  lookup_table_-1.csv  lookup_table_-2.csv  lookup_table_-3.csv
